--- a/weidel.html
+++ b/weidel.html
@@ -46,7 +46,13 @@
             <h3>Bildung & Berufslaufbahn</h3>
             <p><strong>Studium:</strong> Weidel studierte Volkswirtschaftslehre an der Universität Mannheim und schloss mit einem Diplom ab.</p>
             <p><strong>Berufserfahrung:</strong> Vor ihrer politischen Karriere arbeitete Weidel als Unternehmensberaterin und war in der Finanzbranche tätig. Sie hatte unter anderem Positionen bei großen Banken und Beraterunternehmen inne.</p>
-      
+
+            <p>
+              <strong>Persönliches Leben:</strong> Alice Weidel lebt mit ihrer Partnerin 
+              Sarah Bossard zusammen, die sri-lankische Wurzeln hat und in der Schweiz 
+              aufgewachsen ist. Gemeinsam haben sie zwei Söhne.
+            </p>
+     
             <h3>Politische Laufbahn</h3>
             <p><strong>Seit 2017:</strong> Vorsitzende der AfD-Fraktion im Deutschen Bundestag</p>
             <p><strong>Seit 2013:</strong> Mitglied der AfD, zunächst in der Landesgruppe Baden-Württemberg</p>
@@ -99,11 +105,9 @@
         Ihre Äußerung wurde von vielen als rassistisch und frauenfeindlich empfunden, während ihre Anhänger sie als Ausdruck einer nötigen Kritik an der Integrationspolitik und den sozialen Missständen interpretierten.
       </p>
 
-        <div class="video-container">
+        <div class="smallvideo-container">
             <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/ZEGj1T0pnR0?si=xdAouOxOxm6CHV75" title="YouTube video player" "
+              src="https://www.youtube.com/embed/ZEGj1T0pnR0?si=xdAouOxOxm6CHV75"
               title="Alice Weidel im Bundestag: "Kopftuchmädchen und andere Taugenichtse" "
               frameborder="0"
               allowfullscreen
