--- a/afd.html
+++ b/afd.html
@@ -164,10 +164,8 @@
             handele.
           </p>
 
-          <div class="video-container">
+          <div class="smallvideo-container">
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/hzB3fbTPIKU?si=lqst-vgxB7cy6K8l"
               title="Das passiert, wenn der Verfassungsschutz die AfD beobachtet"
               frameborder="0"
