--- a/baerbock.html
+++ b/baerbock.html
@@ -121,12 +121,10 @@
           Ihre Wortwahl ließ vermuten, dass sie die <b>Differenzierung zwischen einer politischen Auseinandersetzung</b> und einem tatsächlichen <b>Krieg</b> nicht richtig verstand. Kritiker warfen ihr vor, die ohnehin gespannte Lage weiter zu verschärfen und mit ihrer unüberlegten Rhetorik den internationalen Konflikt unnötig anzuheizen – sicherlich keine Eigenschaft, die einen deutschen Außenminister auszeichnen sollte.
       </p>          
   
-        <div class="video-container">
+        <div class="smallvideo-container">
           <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/TJCj3U33KPI?si=yGtVr3X_q-sypWOT" title="YouTube video player" 
-                        title="Annalena Baerbock : "We are fighting a war against Russia.""
+            src="https://www.youtube.com/embed/TJCj3U33KPI?si=yGtVr3X_q-sypWOT"
+            title="Annalena Baerbock: We are fighting a war against Russia."
             frameborder="0"
             allowfullscreen
           ></iframe>
@@ -180,10 +178,8 @@
         Im Februar 2023 sorgte <b>Annalena Baerbock</b> für Erheiterung, als sie von einer „<b>360-Grad-Wende</b>“ sprach, die <b>Russland angeblich vollziehen müsste</b>, um den Krieg zu beenden. Dieser Begriff, der eher nach einem <mark>Kreisverkehr</mark> als nach einer politischen Lösung klang, sorgte nicht nur für <mark>Kopfschütteln</mark>, sondern auch für die Frage, ob sie den Unterschied zwischen einer echten Wendung und einem Rückkehrpunkt verstanden hat.
     </p>
 
-      <div class="video-container">
+      <div class="smallvideo-container">
         <iframe
-          width="560"
-          height="315"
           src="https://www.youtube.com/embed/eHNo4Sg6TTg?si=Ti4azlJXYUuxNmF1"
           title="Baerbocks 360-Grad-Wende"
           frameborder="0"
@@ -235,10 +231,8 @@
         Im September 2022 sorgte <b>Annalena Baerbock</b> für Aufsehen, als sie bei einer Veranstaltung in Prag sagte: „<b>Egal, was die deutschen Wähler denken</b>…“. Diese Aussage, die nicht nur als <mark>arrogant</mark>, sondern auch als zutiefst <mark>undemokratisch</mark> wahrgenommen wurde, steht im direkten Widerspruch zu ihrer Aufgabe als Außenministerin. Ihre Rolle ist es, die Interessen der <mark>deutschen Bevölkerung</mark> zu vertreten, nicht ihre persönlichen Ansichten über das politische Engagement der Wähler zu stellen. Baerbock stellte mit dieser Äußerung das Vertrauen in die <mark>demokratischen Werte</mark>, die sie eigentlich vertreten sollte, in Frage.
     </p>
 
-        <div class="video-container">
+        <div class="smallvideo-container">
             <iframe
-                width="560"
-                height="315"
                 src="https://www.youtube.com/embed/6s3jGyDKUMA?si=lgUXgDwVTFsp31ZI" 
                 title="Heftige Kritik an Aussage von Annalena Baerbock"
                 frameborder="0"
@@ -276,8 +270,6 @@
       Annalena Baerbock ist wahrlich ein Meister der politischen Sprachkunst. Ihre sprachlichen Ausrutscher – von „360-Grad-Wenden“ bis hin zu bahnbrechenden Erkenntnissen wie „egal, was die deutschen Wähler denken“ – sind einfach genial in ihrer Fähigkeit, für Irritationen zu sorgen. Hier ein kleiner Ausschnitt - die Sammlung weiterer sprachlicher Meisterwerke ist unendlich.</p>
     <div class="video-container">
         <iframe
-          width="560"
-          height="315"
           src="https://www.youtube.com/embed/Ya5fV0OVo3s"
           title="Best of Annalena Baerbock - Versprecher und anderes"
           frameborder="0"
