--- a/cducsu.html
+++ b/cducsu.html
@@ -157,12 +157,10 @@
             gesellschaftliche Klima in Deutschland haben.
         </p>
 
-          <div class="video-container">
+          <div class="smallvideo-container">
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/kDQki0MMFh4?si=OCHL72I_swL-J_Ao"
-              title="Flüchtlingspolitik: "Wir schaffen das"-Statement von Angela Merkel am 31.08.2015"
+              title="Flüchtlingspolitik: Wir schaffen das-Statement von Angela Merkel am 31.08.2015"
               frameborder="0"
               allowfullscreen
             ></iframe>
