--- a/faeser.html
+++ b/faeser.html
@@ -81,33 +81,34 @@
 
           <h3>Politische Positionen</h3>
           <p>
-            <strong>Schwerpunkte:</strong> Vielfalt, Offenheit, Kampf
-            gegen Rechtsextremismus
+            <strong>Schwerpunkte:</strong> Vielfalt, Offenheit, Kampf gegen
+            Rechtsextremismus
           </p>
 
           <h3>Highlights</h3>
-<p>
-  Faeser fiel wiederholt durch fragwürdige Entscheidungen und Äußerungen auf:  
-  Ihre Besetzung des BfV-Chefpostens sorgte für heftige Kritik, ihr Umgang mit  
-  Clan-Kriminalität wurde als zu lasch bewertet, und ihre Position zur  
-  Migrationspolitik löste Debatten über innere Sicherheit aus.  
-</p>  
+          <p>
+            Faeser fiel wiederholt durch fragwürdige Entscheidungen und
+            Äußerungen auf: Ihre Besetzung des BfV-Chefpostens sorgte für
+            heftige Kritik, ihr Umgang mit Clan-Kriminalität wurde als zu lasch
+            bewertet, und ihre Position zur Migrationspolitik löste Debatten
+            über innere Sicherheit aus.
+          </p>
 
-<p>
-  Während der Flutkatastrophe 2023 konzentrierte sie sich vorrangig auf  
-  ihren NRW-Wahlkampf – mit überschaubarem Erfolg. Dafür setzt sie sich  
-  mit voller Überzeugung im Kampf gegen Rechts ein, demonstriert regelmäßig  
-  die richtige Haltung für Vielfalt und Offenheit und verschafft Deutschland  
-  weltweit Aufmerksamkeit – sei es mit einer Regenbogenbinde in Katar oder  
-  durch ihre Teilnahme an Demos mit Polizei-Gegnern.  
-</p>  
+          <p>
+            Während der Flutkatastrophe 2023 konzentrierte sie sich vorrangig
+            auf ihren NRW-Wahlkampf – mit überschaubarem Erfolg. Dafür setzt sie
+            sich mit voller Überzeugung im Kampf gegen Rechts ein, demonstriert
+            regelmäßig die richtige Haltung für Vielfalt und Offenheit und
+            verschafft Deutschland weltweit Aufmerksamkeit – sei es mit einer
+            Regenbogenbinde in Katar oder durch ihre Teilnahme an Demos mit
+            Polizei-Gegnern.
+          </p>
 
-<p>
-  Migration und innere Sicherheit scheinen hingegen nicht ganz oben auf  
-  ihrer Prioritätenliste zu stehen.  
-</p>
-
-        </div>         
+          <p>
+            Migration und innere Sicherheit scheinen hingegen nicht ganz oben
+            auf ihrer Prioritätenliste zu stehen.
+          </p>
+        </div>
 
         <img
           class="bio-image"
@@ -161,10 +162,8 @@
             Interessen, die den sportlichen Erfolg in den Hintergrund rückten?
           </p>
 
-          <div class="video-container">
+          <div class="smallvideo-container">
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/hA0OQm8Gecs?si=qlXgxpxDltFS9I88"
               title="WM 2022: Nach der Pleite gegen Japan herrscht Krisen-Stimmung in Katar"
               frameborder="0"
@@ -181,8 +180,7 @@
             <a
               href="https://www.sueddeutsche.de/sport/nationalmannschaft-one-love-debatte-bei-wm-voeller-kritisiert-auch-faeser-dpa.urn-newsml-dpa-com-20090101-230120-99-295626"
               target="_blank"
-            >
-              „One Love“-Debatte bei WM: Völler kritisiert auch Faeser
+              >„One Love“-Debatte bei WM: Völler kritisiert auch Faeser
             </a>
           </p>
 
@@ -238,10 +236,8 @@
             und Offenheit klarmachte.
           </p>
 
-          <div class="video-container">
+          <div class="smallvideo-container">
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/ZnV5td6qX8E?si=ILBEHmhE8VUthJgB"
               title="CSD Frankfurt 2023 mit Nancy Faeser"
               frameborder="0"
