--- a/fester.html
+++ b/fester.html
@@ -71,9 +71,15 @@
           </p>
 
           <h3>Highlights</h3>
-<p>Emilia Fester sorgte mit ihrer Forderung nach Wahlrecht für Zweijährige und ihrer dramatischen Rede zur Impfpflicht, in der sie behauptete, ihre Jugend geopfert zu haben, während sie tatsächlich verreist war, für Empörung. Zudem stimmte sie 2022 für eine allgemeine Corona-Impfpflicht.</p>
-
-        </div>
+          <p>
+            Emilia Fester war bei ihrer Wahl in den Bundestag 2021 mit 23 Jahren die jüngste Abgeordnete. Für Belustigung sorgte sie mit ihrer Forderung nach Wahlrecht für Zweijährige und 
+            ihrer dramatischen Rede zur Impfpflicht, in der sie behauptete, ihre Jugend geopfert zu haben, während sie tatsächlich verreist war. 
+          </p>
+          <p>
+            Zudem stimmte sie 2022 für eine allgemeine Corona-Impfpflicht.
+          </p>
+          </div>
+          
         <img
           class="bio-image"
           src="https://i.imgur.com/Urg2tSl.png"
@@ -126,10 +132,8 @@
             eine Behauptung, die wissenschaftlich nicht haltbar war.
         </p>        
 
-          <div class="video-container">
+          <div class="smallvideo-container">
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/Tj8r_gLxSz0?si=RPqSmza427x1rvfX"
               title="Fester mit Wutrede bei Impfdebatte: 'Will meine Freiheit zurück'"
               frameborder="0"
@@ -202,10 +206,8 @@
             Aufmerksamkeit erzeugen wollte.
         </p>        
 
-          <div class="video-container">
+          <div class="smallvideo-container">
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/pNnPAZsQ5Ik?si=y2_WavtTMpPegYPD"
               title="Emilia Fester will Wahlrecht für Zweijährige"
               frameborder="0"
