--- a/ganserer.html
+++ b/ganserer.html
@@ -138,10 +138,8 @@
             für Trans-Personen ging.
         </p>        
 
-          <div class="video-container">
+          <div class="smallvideo-container">
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/D4kMJJ8XBBk?si=MOWAcAF8eDhvXPxM"
               title="Ganserer in Reizwäsche im Bundestag"
               frameborder="0"
