--- a/habeck.html
+++ b/habeck.html
@@ -156,10 +156,8 @@
           </p>
 
           <!-- Eingebettetes YouTube-Video -->
-          <div class="video-container">
+          <div class="smallvideo-container">
             <iframe
-              width="560"
-              height="315"
               src="https://www.youtube.com/embed/3F3XjET9aCM"
               title="Robert Habecks Wirtschaftslogik"
               frameborder="0"
@@ -217,11 +215,9 @@
               Schließlich ist es nicht jedem gegeben, komplexe wirtschaftliche Zusammenhänge mit einer solchen Leichtigkeit und Flexibilität zu interpretieren – von "Basel III" über "eins zu vier" bis zu "nicht abgedeckten 90 Prozent".
           </p>      
     
-            <div class="video-container">
+            <div class="smallvideo-container">
                 <iframe
-                    width="560"
-                    height="315"
-                    src="https://www.youtube.com/embed/sCJmvE-vbN8?si=M3yjcdCfWhf9ob14" title="YouTube video player" 
+                    src="https://www.youtube.com/embed/sCJmvE-vbN8?si=M3yjcdCfWhf9ob14"
                     title="Herr Habeck, warum muss ich ihnen das erklären?"
                     frameborder="0"
                     allowfullscreen
