--- a/scholz.html
+++ b/scholz.html
@@ -58,15 +58,32 @@
             als Rechtsanwalt und war in einer Rechtsanwaltskanzlei tätig.
           </p>
           <h3>Politische Laufbahn</h3>
-          <p><strong>Seit 2021:</strong> Bundeskanzler der Bundesrepublik Deutschland</p>
+          <p>
+            <strong>2021 - 2025:</strong> Bundeskanzler der Bundesrepublik
+            Deutschland
+          </p>
           <p><strong>2018 – 2021:</strong> Bundesminister der Finanzen</p>
           <p><strong>2011 – 2018:</strong> Erster Bürgermeister von Hamburg</p>
-          <p><strong>2007 – 2009:</strong> Bundesminister für Arbeit und Soziales</p>
-          <p><strong>2002 – 2011:</strong> Mitglied des Deutschen Bundestages; 2002 – 2004 Generalsekretär der SPD; 2005 – 2007 Parlamentarischer Geschäftsführer der SPD-Bundestagsfraktion</p>
-          <p><strong>2005 – 2011:</strong> Stellvertretender Vorsitzender der SPD-Bundestagsfraktion</p>
-          <p><strong>Februar – April 2018:</strong> Kommissarischer SPD-Parteivorsitzender</p>
-          <p><strong>1982 – 1988:</strong> Stellvertretender Bundesvorsitzender der Jusos</p>
-          
+          <p>
+            <strong>2007 – 2009:</strong> Bundesminister für Arbeit und Soziales
+          </p>
+          <p>
+            <strong>2002 – 2011:</strong> Mitglied des Deutschen Bundestages;
+            2002 – 2004 Generalsekretär der SPD; 2005 – 2007 Parlamentarischer
+            Geschäftsführer der SPD-Bundestagsfraktion
+          </p>
+          <p>
+            <strong>2005 – 2011:</strong> Stellvertretender Vorsitzender der
+            SPD-Bundestagsfraktion
+          </p>
+          <p>
+            <strong>Februar – April 2018:</strong> Kommissarischer
+            SPD-Parteivorsitzender
+          </p>
+          <p>
+            <strong>1982 – 1988:</strong> Stellvertretender Bundesvorsitzender
+            der Jusos
+          </p>
 
           <h3>Politische Positionen</h3>
           <p>
@@ -74,10 +91,18 @@
             Wirtschaftspolitik, EU-Integration
           </p>
 
-        <h3>Highlights</h3>
-<p>Olaf Scholz blieb bei verschiedenen Skandalen wie Cum-Ex, Wirecard und dem G20-Fiasko in Hamburg Verantwortung schuldig und zeigte wiederholt Gedächtnislücken und mangelnde Bereitschaft, Fehler einzugestehen. Trotz dieser Fehltritte konnte er sich stets aus der Affäre ziehen und wurde Bundeskanzler.</p>
-<p>Im April 2022 stimmte Scholz zudem für eine allgemeine Corona-Impfpflicht.</p>
-
+          <h3>Highlights</h3>
+          <p>
+            Olaf Scholz blieb bei verschiedenen Skandalen wie Cum-Ex, Wirecard
+            und dem G20-Fiasko in Hamburg Verantwortung schuldig und zeigte
+            wiederholt Gedächtnislücken und mangelnde Bereitschaft, Fehler
+            einzugestehen. Trotz dieser Fehltritte konnte er sich stets aus der
+            Affäre ziehen und wurde Bundeskanzler.
+          </p>
+          <p>
+            Im April 2022 stimmte Scholz zudem für eine allgemeine
+            Corona-Impfpflicht.
+          </p>
         </div>
 
         <img
@@ -142,6 +167,15 @@
             gefunden.
           </p>
 
+          <div class="smallvideo-container">
+            <iframe
+              src="https://www.youtube.com/embed/N_oEFSMoMuA?si=7HmS1znalZhbHahV"
+              title="Herr Scholz erinnert sich nicht"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
+
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> 2016 – heute
           </p>
@@ -174,15 +208,6 @@
             <span class="hashtag">#steuern</span>
             <a href="scholz.html">#scholz</a>
           </p>
-
-          <!-- Kommentare (Option, wenn implementiert) -->
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea
-              placeholder="Ihre Meinung zum Cum-Ex-Skandal..."
-            ></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
         </div>
         <!-- Ende der collapsible-content -->
       </div>
@@ -244,6 +269,15 @@
             Beobachter gaben <b>Scholz und der BaFin</b> eine Mitschuld an der
             <b>Unfähigkeit, den Betrug zu verhindern</b>.
           </p>
+  
+          <div class="smallvideo-container">
+            <iframe
+              src="https://www.youtube.com/embed/c4VwrmbYfgY?si=CJMBs7HT_MXxoO0Z"
+              title="VORWÜRFE GEGEN SCHOLZ: Finanzminister wusste seit Februar 2019 von Fall Wirecard"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> 2015 – 2020
@@ -282,20 +316,12 @@
             <span class="hashtag">#wirecard</span>
             <a href="scholz.html">#scholz</a>
             <span class="hashtag">#bafin</span>
+            <a href="spd.html">#spd</a>
           </p>
 
-          <!-- Kommentare (Option, wenn implementiert) -->
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea
-              placeholder="Ihre Meinung zum Wirecard-Skandal..."
-            ></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
-        </div>
         <!-- Ende der collapsible-content -->
       </div>
-
+    </div>
       <!-- Ende Wirecard -->
 
       <!-- Highlight 3: G20-Gipfel Hamburg -->
@@ -306,12 +332,12 @@
 
         <!-- Skandal-Skala mit Farbverlauf -->
         <div class="highlight-skandal-scale">
-          <h4>Skandal-Skala: 8/10</h4>
+          <h4>Skandal-Skala: 7/10</h4>
 
           <div class="gradient-bar-container">
-            <div class="gradient-bar-filled" style="width: 80%"></div>
+            <div class="gradient-bar-filled" style="width: 70%"></div>
             <!-- Dynamische Breite -->
-            <div class="gradient-bar-unfilled" style="width: 20%"></div>
+            <div class="gradient-bar-unfilled" style="width: 30%"></div>
             <!-- Ungefüllter Bereich -->
           </div>
         </div>
@@ -349,6 +375,15 @@
             entschuldigen müsse“.
           </p>
 
+          <div class="smallvideo-container">
+            <iframe
+            src="https://www.youtube.com/embed/tAtZThq2BLw?si=QJJpcWqL_2HEiiAC""
+              title="Hamburg: G20-Proteste arten in Häuserkampf aus"
+              frameborder="0"
+              allowfullscreen
+            ></iframe>
+          </div>
+
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Juli 2017
           </p>
@@ -382,38 +417,32 @@
           </div>
 
           <p class="party-highlight-hashtags">
-            <span class="hashtag">#G20</span>
+            <span class="hashtag">g20</span>
+            <a href="spd.html">#spd</a>
             <span class="hashtag">#hamburg</span>
             <a href="scholz.html">#scholz</a>
           </p>
 
-          <!-- Kommentare (Option, wenn implementiert) -->
-          <div class="comment-section">
-            <h4>Diskussion</h4>
-            <textarea placeholder="Ihre Meinung zum G20-Skandal..."></textarea>
-            <button class="submit-comment">Kommentar absenden</button>
-          </div>
-        </div>
         <!-- Ende der collapsible-content -->
       </div>
       <!-- Ende G20 -->
     </section>
 
-        <section class="party-members">
-    <h2 class="party-section-title">Weitere Mitglieder</h2>
-    <ul class="party-members-list">
-            <li class="party-member-item">
-        <a href="klingbeil.html">Lars Klingbeil</a>
-      </li>
-            <li class="party-member-item">
-        <a href="faeser.html">Nancy Faeser</a>
-      </li>
-            <li class="party-member-item">
-        <a href="esken.html">Saskia Esken</a>
-      </li>   
-      <li class="party-member-item">Karl Lauterbach</li>
-    </ul> 
-  </section>
+    <section class="party-members">
+      <h2 class="party-section-title">Weitere Mitglieder</h2>
+      <ul class="party-members-list">
+        <li class="party-member-item">
+          <a href="klingbeil.html">Lars Klingbeil</a>
+        </li>
+        <li class="party-member-item">
+          <a href="esken.html">Saskia Esken</a>
+        </li>
+        <li class="party-member-item">
+          <a href="faeser.html">Nancy Faeser</a>
+        </li>
+        <li class="party-member-item">Karl Lauterbach</li>
+      </ul>
+    </section>
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
