--- a/esken.html
+++ b/esken.html
@@ -98,6 +98,9 @@
             Fehltritte in der Migrationspolitik sorgten für hitzige
             Diskussionen.
           </p>
+          <p>
+  Zudem stimmte er 2022 für die allgemeine Corona-Impfpflicht.  
+</p>
         </div>
 
         <img
