--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
         <div class="hero-content">
           <h1>Demokratie verstehen. Verantwortung einfordern.</h1>
           <p class="mission-statement">
-            Neutrale Informationen über deutsche Politiker und Parteien –
+            Wissenswerte Informationen über deutsche Politiker und Parteien –
             faktenbasiert und verständlich aufbereitet.
           </p>
           <!-- Neue Beschreibung von factico -->
           <p class="factico-description">
             <strong>factico.</strong> Für klare Einordnung, transparente Analyse
-            und unabhängige Bewertungen politischer Akteure und ihrer
-            Handlungen.
+            und unabhängige Bewertungen politischer Akteure.
           </p>
           <div class="search-container">
             <label for="searchInput" class="visually-hidden">
