wefdergf btgwerfqwewg wwwr

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             factico.
           </a>
           <div class="nav-items">
-            <a href="#about" class="nav-link">Über uns</a>
+            <a href="#about" class="nav-link">GRML</a>
             <a href="#methodik" class="nav-link">Methodik</a>
             <a href="#parties" class="nav-link">Parteien</a>
           </div>
