--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </a>
           <div class="nav-items">
             <a href="#about" class="nav-link">Über uns</a>
-            <a href="#methodik" class="nav-link">Methodikkkk</a>
+            <a href="#methodik" class="nav-link">Methodik</a>
             <a href="#parties" class="nav-link">Parteien</a>
           </div>
         </div>
