--- a/gruene/index.html
+++ b/gruene/index.html
@@ -271,7 +271,7 @@
           <a href="habeck.html">Robert Habeck</a>
         </li>
         <li class="party-member-item">
-          <a href="baerbock.html">Annalena Baerbock</a>
+          <a href="/gruene/baerbock/">Annalena Baerbock</a>
         </li><li class="party-member-item">
           <a href="goering-eckardt.html">Katrin Göring-Eckardt</a>
         </li>
