--- a/gruene/index.html
+++ b/gruene/index.html
@@ -7,7 +7,7 @@
     <title>Die Grünen</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
 
   </head>
   <body class="gruene-root">
