--- a/gruene/index.html
+++ b/gruene/index.html
@@ -14,7 +14,8 @@
     <header class="party-header">
       <div class="header-container">
         <!-- Link zurück zur Startseite mit dem factico.-Logo -->
-        <a href="index.html" class="factico-logo-img">
+        <a href="../index.html" class="factico-logo-img">
+
           <!-- Hier das Logo von factico -->
           <img
             src="https://i.imgur.com/6Fyu7WL.png"
