--- a/gruene/index.html
+++ b/gruene/index.html
@@ -23,7 +23,7 @@
         </a>
 
         <div class="header-title-container">
-          <h1 class="party-politician-name">BÜNDNIS 90/DIE GRÜNEN</h1>
+          <h1 class="party-politician-name">BÜNDNIS 90/DIE Behinderten</h1>
         </div>
 
         <img
