--- a/gruene/index.html
+++ b/gruene/index.html
@@ -7,13 +7,14 @@
     <title>Die Grünen</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css">>
   </head>
   <body class="gruene-root">
     <header class="party-header">
       <div class="header-container">
         <!-- Link zurück zur Startseite mit dem factico.-Logo -->
-        <a href="index.html" class="factico-logo-img">
+        <a href="../index.html" class="factico-logo-img">
+
           <!-- Hier das Logo von factico -->
           <img
             src="https://i.imgur.com/6Fyu7WL.png"
@@ -23,7 +24,7 @@
         </a>
 
         <div class="header-title-container">
-          <h1 class="party-politician-name">BÜNDNIS 90/DIE Behinderten</h1>
+          <h1 class="party-politician-name">BÜNDNIS 90/DIE Grünen</h1>
         </div>
 
         <img
