--- a/gruene/index.html
+++ b/gruene/index.html
@@ -1,20 +1,19 @@
-
 <!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Die Grünen</title>
+    <title>Annalena Baerbock</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
     <link rel="stylesheet" href="../styles.css">
+
   </head>
   <body class="gruene-root">
     <header class="party-header">
       <div class="header-container">
         <!-- Link zurück zur Startseite mit dem factico.-Logo -->
         <a href="../index.html" class="factico-logo-img">
-
           <!-- Hier das Logo von factico -->
           <img
             src="https://i.imgur.com/6Fyu7WL.png"
@@ -24,14 +23,17 @@
         </a>
 
         <div class="header-title-container">
-          <h1 class="party-politician-name">BÜNDNIS 90/DIE GRÜNEN</h1>
+          <h1 class="party-politician-name">ANNALENA BAERBOCK</h1>
         </div>
 
-        <img
-          src="https://i.imgur.com/xe72gQi.png"
-          alt="Grünen-Logo"
-          class="party-logo"
-        />
+        <!-- Grüne-Logo als Link zur Grünen-Seite -->
+        <a href="../gruene/">
+          <img
+            src="https://i.imgur.com/xe72gQi.png"
+            alt="Grünen-Logo"
+            class="party-logo"
+          />
+        </a>
       </div>
     </header>
 
