ordner ohne html

--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -6,7 +6,7 @@
     <title>Robert Habeck</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../../styles.css">
   </head>
   <body class="gruene-root">
     <header class="party-header">
