--- a/weidel.html
+++ b/weidel.html
@@ -6,7 +6,7 @@
     <title>Alice Weidel</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../../styles.css">
   </head>
   <body class="afd-root">
     <header class="party-header">
