--- a/gruene/ganserer/index.html
+++ b/gruene/ganserer/index.html
@@ -173,7 +173,8 @@
     <h2 class="party-section-title">Weitere Mitglieder</h2>
     <ul class="party-members-list">
             <li class="party-member-item">
-        <a href="habeck.html">Robert Habeck</a>
+              <a href="../habeck/">Robert Habeck</a>
+
       </li>
       <li class="party-member-item">
         <a href="baerbock.html">Annalena Baerbock</a>
