--- a/cducsu/index.html
+++ b/cducsu/index.html
@@ -7,7 +7,7 @@
     <title>CDU/CSU</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css">
   </head>
   <body class="cdu-root">
     <header class="party-header">
