--- a/linke/linke.html
+++ b/linke/linke.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DIE LINKE</title>
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body class="linke-root">
     <header class="party-header">
