--- a/spd/index.html
+++ b/spd/index.html
@@ -6,7 +6,7 @@
     <title>SPD</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body class="spd-root">
     <header class="party-header">
