factico link von parteien

--- a/bsw/index.html
+++ b/bsw/index.html
@@ -10,7 +10,8 @@
 <body class="bsw-root">
     <header class="party-header">
         <div class="header-container">
-            <a href="index.html" class="factico-logo-img">
+            <a href="../" class="factico-logo-img">
+
                 <img
                     src="https://i.imgur.com/6Fyu7WL.png"
                     alt="factico. Logo"
