--- a/linke/linke.html
+++ b/linke/linke.html
@@ -10,7 +10,7 @@
   <body class="linke-root">
     <header class="party-header">
       <div class="header-container">
-        <a href="index.html" class="factico-logo-img">
+        <a href="../" class="factico-logo-img">
           <img
             src="https://i.imgur.com/6Fyu7WL.png"
             alt="factico. Logo"
