--- a/gruene/baerbock/index.html
+++ b/gruene/baerbock/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <!-- Grüne-Logo als Link zu gruene.html -->
-        <a href="gruene.html">
+        <a href="../">
           <img
             src="https://i.imgur.com/xe72gQi.png"
             alt="Grünen-Logo"
