--- a/afd/weidel/weidel.html
+++ b/afd/weidel/weidel.html
@@ -26,7 +26,7 @@
         </div>
 
         <!-- SPD-Logo als Link zu spd.html -->
-        <a href="spd.html">
+        <a href="../">
             <img
               src="https://i.imgur.com/av3Eoww.png"
               alt="AfD-Logo"
@@ -124,7 +124,7 @@
         </p>
   
         <div class="party-highlight-hashtags">
-            <a href="afd.html">#afd</a>
+            <a href="../">#afd</a>
             <span class="hashtag">#kopftuchmaedchen</span>
             <span class="hashtag">#weidel</span>
             <span class="hashtag">#diskriminierung</span>
