alle politiker in ihre ordner

--- a/spd/esken/index.html
+++ b/spd/esken/index.html
@@ -6,7 +6,7 @@
     <title>Saskia Esken</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles.css" />
   </head>
   <body class="spd-root">
     <header class="party-header">
@@ -98,9 +98,7 @@
             Fehltritte in der Migrationspolitik sorgten für hitzige
             Diskussionen.
           </p>
-          <p>
-  Zudem stimmte er 2022 für die allgemeine Corona-Impfpflicht.  
-</p>
+          <p>Zudem stimmte er 2022 für die allgemeine Corona-Impfpflicht.</p>
         </div>
 
         <img
