--- a/afd/index.html
+++ b/afd/index.html
@@ -253,6 +253,6 @@
       <p>&copy; 2025 factico.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
