--- a/afd/weidel/index.html
+++ b/afd/weidel/index.html
@@ -147,6 +147,7 @@
       <p>&copy; 2025 factico.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
+
   </body>
 </html>
