--- a/fdp/index.html
+++ b/fdp/index.html
@@ -226,6 +226,7 @@
       <p>&copy; 2025 factico.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
+
   </body>
 </html>
