--- a/gruene/fester/index.html
+++ b/gruene/fester/index.html
@@ -264,6 +264,7 @@
       <p>&copy; 2025 factico.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
+
   </body>
 </html>
