--- a/gruene/goering-eckardt/index.html
+++ b/gruene/goering-eckardt/index.html
@@ -258,6 +258,7 @@
       <p>&copy; 2025 factico.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
+
   </body>
 </html>
