--- a/gruene/index.html
+++ b/gruene/index.html
@@ -293,6 +293,7 @@
       <p>&copy; 2025 factico.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
+
   </body>
 </html>
