--- a/spd/faeser/index.html
+++ b/spd/faeser/index.html
@@ -291,6 +291,6 @@
       <p>&copy; 2025 factico.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
   </body>
 </html>
