--- a/spd/index.html
+++ b/spd/index.html
@@ -606,6 +606,6 @@
       <p>&copy; 2025 factico.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
   </body>
 </html>
