--- a/spd/klingbeil/index.html
+++ b/spd/klingbeil/index.html
@@ -176,6 +176,6 @@
       <p>&copy; 2025 factico.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../../script.js"></script>
   </body>
 </html>
