--- a/index.html
+++ b/index.html
@@ -180,15 +180,15 @@
         <div class="footer-section">
           <h4>Rechtliches</h4>
           <ul>
-            <li><a href="impressum.html">Impressum</a></li>
-            <li><a href="datenschutz.html">Datenschutz</a></li>
+            <li><a href="/impressum/">Impressum</a></li>
+            <li><a href="/datenschutz/">Datenschutz</a></li>
           </ul>
         </div>
         <div class="footer-section">
           <h4>Kontakt</h4>
           <ul>
             <li><a href="mailto:contact@factico.eu">Presse</a></li>
-            <li><a href="feedback.html">Feedback</a></li>
+            <li><a href="/feedback/">Feedback</a></li>
           </ul>
         </div>
       </div>
