--- a/datenschutz/index.html
+++ b/datenschutz/index.html
@@ -13,7 +13,7 @@
     <title>Datenschutz</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <div class="datenschutz-container">
@@ -45,7 +45,8 @@
         <p class="datenschutz-text">
           Verantwortlicher im Sinne der Datenschutzgesetze ist:
           <br /><strong>factico.</strong><br />
-          <a href="https://www.factico.eu" target="_blank">www.factico.eu</a><br />
+          <a href="https://www.factico.eu" target="_blank">www.factico.eu</a
+          ><br />
           Andreas Siade<br />
           Adolf-Baeyer-Damm 8<br />
           81735 München<br />
