--- a/feedback/index.html
+++ b/feedback/index.html
@@ -13,7 +13,7 @@
     <title>Feedback</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <!-- Font Awesome CDN -->
     <link
       rel="stylesheet"
@@ -72,6 +72,5 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
   </body>
 </html>
