--- a/impressum/index.html
+++ b/impressum/index.html
@@ -13,7 +13,7 @@
     <title>Impressum</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <div class="datenschutz-container">
