grüne member links

--- a/gruene/fester/index.html
+++ b/gruene/fester/index.html
@@ -237,28 +237,29 @@
     </section>
 
     <section class="party-members">
-    <h2 class="party-section-title">Weitere Mitglieder</h2>
-    <ul class="party-members-list">
-            <li class="party-member-item">
-        <a href="habeck.html">Robert Habeck</a>
-      </li>
-      <li class="party-member-item">
-        <a href="baerbock.html">Annalena Baerbock</a>
-      </li>
-      <li class="party-member-item">
-        <a href="lang.html">Ricarda Lang</a>
-      </li>
-      <li class="party-member-item">
-                <a href="goering-eckardt.html">Katrin Göring-Eckardt</a>
-      </li>
-      <li class="party-member-item">
-        <a href="neubauer.html">Luisa Neubauer</a>
-      </li>
-      <li class="party-member-item">
-        <a href="ganserer.html">Markus (Tessa) Ganserer</a>
-      </li>
-    
+      <h2 class="party-section-title">Weitere Mitglieder</h2>
+      <ul class="party-members-list">
+          <li class="party-member-item">
+              <a href="gruene/habeck/">Robert Habeck</a>
+          </li>
+          <li class="party-member-item">
+              <a href="gruene/baerbock/">Annalena Baerbock</a>
+          </li>
+          <li class="party-member-item">
+              <a href="gruene/lang/">Ricarda Lang</a>
+          </li>
+          <li class="party-member-item">
+              <a href="gruene/goering-eckardt/">Katrin Göring-Eckardt</a>
+          </li>
+          <li class="party-member-item">
+              <a href="gruene/neubauer/">Luisa Neubauer</a>
+          </li>
+          <li class="party-member-item">
+              <a href="gruene/ganserer/">Markus (Tessa) Ganserer</a>
+          </li>
+      </ul>
   </section>
+  
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
