--- a/gruene/goering-eckardt/index.html
+++ b/gruene/goering-eckardt/index.html
@@ -6,7 +6,7 @@
     <title>Katrin Göring-Eckardt</title>
     <!-- Favicon hinzufügen -->
     <link rel="icon" type="image/png" href="https://i.imgur.com/6Fyu7WL.png" />
-    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="../../styles.css" />
   </head>
   <body class="gruene-root">
     <header class="party-header">
@@ -83,13 +83,17 @@
             Integration & Migration
           </p>
 
-        <h3>Highlights</h3>
-<p>
-  2024 verhängte Katrin Göring-Eckardt ein Ordnungsgeld gegen Beatrix von Storch, nachdem diese Tessa Ganserer als „biologisch und juristisch ein Mann“ bezeichnete.</p>
-   <p>Im Januar 2025 sorgte sie mit ihrer Aussage, dass Integration nicht das „Hauptproblem“ des Landes sei, für breite Kritik. Zudem stimmte sie 2022 für eine allgemeine Corona-Impfpflicht.
-</p>
-
-
+          <h3>Highlights</h3>
+          <p>
+            2024 verhängte Katrin Göring-Eckardt ein Ordnungsgeld gegen Beatrix
+            von Storch, nachdem diese Tessa Ganserer als „biologisch und
+            juristisch ein Mann“ bezeichnete.
+          </p>
+          <p>
+            Im Januar 2025 sorgte sie mit ihrer Aussage, dass Integration nicht
+            das „Hauptproblem“ des Landes sei, für breite Kritik. Zudem stimmte
+            sie 2022 für eine allgemeine Corona-Impfpflicht.
+          </p>
         </div>
 
         <img
@@ -131,15 +135,16 @@
             den wirklichen Alltagsproblemen der Bevölkerung in Frage stellte.
             Sie behauptete, Themen wie <b>Integration</b> seien nicht das
             „Hauptproblem“ des Landes.
-        </p>
-        <p class="party-highlight-description">
+          </p>
+          <p class="party-highlight-description">
             Ihre Worte stießen auf breite Kritik, insbesondere von Politikern,
-            Fachverbänden und Experten, die die Aussagen als <b>realitätsfern</b>
-            und <b>spaltend</b> empfanden. <b>Migration</b> und <b>Integration</b>
+            Fachverbänden und Experten, die die Aussagen als
+            <b>realitätsfern</b> und <b>spaltend</b> empfanden.
+            <b>Migration</b> und <b>Integration</b>
             bleiben für viele Deutsche ein zentrales gesellschaftliches Thema,
             und die Bemerkung wurde als Verharmlosung der tatsächlichen
             Herausforderungen wahrgenommen.
-        </p>        
+          </p>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Januar 2025
@@ -168,8 +173,10 @@
         </h3>
 
         <div class="highlight-skandal-scale">
-          <h4>Regenbogen-Level: 7/10 🌈🌈🌈🌈🌈🌈🌈⚪⚪⚪ </h4>
-  <p class="highlight-description">Ein Ordnungsgeld für die richtige (parteiinterne) Meinung.</p>
+          <h4>Regenbogen-Level: 7/10 🌈🌈🌈🌈🌈🌈🌈⚪⚪⚪</h4>
+          <p class="highlight-description">
+            Ein Ordnungsgeld für die richtige (parteiinterne) Meinung.
+          </p>
           <div class="gradient-bar-container">
             <div class="gradient-bar-filled" style="width: 40%"></div>
             <div class="gradient-bar-unfilled" style="width: 60%"></div>
@@ -183,26 +190,28 @@
         <div class="collapsible-content">
           <p class="party-highlight-description">
             Im Juni 2024 sorgte die Entscheidung von Katrin Göring-Eckardt, ein
-            Ordnungsgeld gegen <b>Beatrix von Storch</b> zu verhängen, für Aufsehen.
-            Von Storch hatte die Grüne Abgeordnete <b>Tessa Ganserer</b> wiederholt als
-            „biologisch und juristisch ein Mann“ bezeichnet und sie mit dem
-            männlichen Titel „Herr Ganserer“ angesprochen.
-        </p>
-        <p class="party-highlight-description">
-            Göring-Eckardt, in ihrer Funktion als <b>Bundestagsvizepräsidentin</b>,
-            verhängte daraufhin das Ordnungsgeld, obwohl von Storch keine klaren
-            Verstöße gegen die parlamentarische Ordnung begangen hatte. Viele
-            kritisierten, dass Göring-Eckardt das Ordnungsgeld eher aus
-            innerparteilicher Solidarität zu Ganserer und politischen Erwägungen
-            gegen von Storch verhängte, anstatt eine objektive Entscheidung zu
-            treffen.
-        </p>
-        <p class="party-highlight-description">
-            Der Vorfall wurde von vielen als <b>Missbrauch der Vizepräsidenten-Rolle</b>
-            wahrgenommen. Göring-Eckardt stellte ihre Machtposition in den Dienst einer
-            parteiinternen Auseinandersetzung und setzte ihre politische Nähe zu Ganserer
-            über eine unparteiische Haltung.
-        </p>        
+            Ordnungsgeld gegen <b>Beatrix von Storch</b> zu verhängen, für
+            Aufsehen. Von Storch hatte die Grüne Abgeordnete
+            <b>Tessa Ganserer</b> wiederholt als „biologisch und juristisch ein
+            Mann“ bezeichnet und sie mit dem männlichen Titel „Herr Ganserer“
+            angesprochen.
+          </p>
+          <p class="party-highlight-description">
+            Göring-Eckardt, in ihrer Funktion als
+            <b>Bundestagsvizepräsidentin</b>, verhängte daraufhin das
+            Ordnungsgeld, obwohl von Storch keine klaren Verstöße gegen die
+            parlamentarische Ordnung begangen hatte. Viele kritisierten, dass
+            Göring-Eckardt das Ordnungsgeld eher aus innerparteilicher
+            Solidarität zu Ganserer und politischen Erwägungen gegen von Storch
+            verhängte, anstatt eine objektive Entscheidung zu treffen.
+          </p>
+          <p class="party-highlight-description">
+            Der Vorfall wurde von vielen als
+            <b>Missbrauch der Vizepräsidenten-Rolle</b>
+            wahrgenommen. Göring-Eckardt stellte ihre Machtposition in den
+            Dienst einer parteiinternen Auseinandersetzung und setzte ihre
+            politische Nähe zu Ganserer über eine unparteiische Haltung.
+          </p>
 
           <p class="party-highlight-date">
             <strong>Zeitraum:</strong> Juni 2024
@@ -230,35 +239,33 @@
     </section>
 
     <section class="party-members">
-    <h2 class="party-section-title">Weitere Mitglieder</h2>
-    <ul class="party-members-list">
-            <li class="party-member-item">
-        <a href="habeck.html">Robert Habeck</a>
-      </li>
-      <li class="party-member-item">
-        <a href="baerbock.html">Annalena Baerbock</a>
-      </li>
-      <li class="party-member-item">
-        <a href="lang.html">Ricarda Lang</a>
-      </li>
-              <li class="party-member-item">
-        <a href="fester.html">Emilia Fester</a>
-      </li>
-   
-      <li class="party-member-item">
-        <a href="neubauer.html">Luisa Neubauer</a>
-      </li>
-      <li class="party-member-item">
-        <a href="ganserer.html">Markus (Tessa) Ganserer</a>
-      </li>
-    
-  </section>
+      <h2 class="party-section-title">Weitere Mitglieder</h2>
+      <ul class="party-members-list">
+        <li class="party-member-item">
+          <a href="../gruene/habeck/">Robert Habeck</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../gruene/baerbock/">Annalena Baerbock</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../gruene/lang/">Ricarda Lang</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../gruene/fester/">Emilia Fester</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../gruene/neubauer/">Luisa Neubauer</a>
+        </li>
+        <li class="party-member-item">
+          <a href="../gruene/ganserer/">Markus (Tessa) Ganserer</a>
+        </li>
+      </ul>
+    </section>
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
     </footer>
 
     <script src="../../script.js"></script>
-
   </body>
 </html>
