--- a/gruene/habeck/index.html
+++ b/gruene/habeck/index.html
@@ -264,30 +264,29 @@
   </div>
 </section>
 
-    <section class="party-members">
-    <h2 class="party-section-title">Weitere Mitglieder</h2>
-    <ul class="party-members-list">
+<section class="party-members">
+  <h2 class="party-section-title">Weitere Mitglieder</h2>
+  <ul class="party-members-list">
       <li class="party-member-item">
-        <a href="baerbock.html">Annalena Baerbock</a>
-      </li>
-      <li class="party-member-item">
-        <a href="lang.html">Ricarda Lang</a>
+          <a href="../gruene/baerbock/">Annalena Baerbock</a>
       </li>
       <li class="party-member-item">
-                <a href="goering-eckardt.html">Katrin Göring-Eckardt</a>
-      </li>
-              <li class="party-member-item">
-        <a href="fester.html">Emilia Fester</a>
-      </li>
-   
-      <li class="party-member-item">
-        <a href="neubauer.html">Luisa Neubauer</a>
+          <a href="../gruene/lang/">Ricarda Lang</a>
       </li>
       <li class="party-member-item">
-        <a href="ganserer.html">Markus (Tessa) Ganserer</a>
+          <a href="../gruene/goering-eckardt/">Katrin Göring-Eckardt</a>
       </li>
-    
-  </section>
+      <li class="party-member-item">
+          <a href="../gruene/fester/">Emilia Fester</a>
+      </li>
+      <li class="party-member-item">
+          <a href="../gruene/neubauer/">Luisa Neubauer</a>
+      </li>
+      <li class="party-member-item">
+          <a href="../gruene/ganserer/">Markus (Tessa) Ganserer</a>
+      </li>
+  </ul>
+</section>
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
