--- a/gruene/index.html
+++ b/gruene/index.html
@@ -258,36 +258,35 @@
         <!-- Ende der collapsible-content -->
       </div>
       <!-- Ende Kosovo-Luftangriff -->
-   
-
 </section>
 
 
-    <section class="party-members">
-      <h2 class="party-section-title">Bekannte Mitglieder</h2>
-      <ul class="party-members-list">
-                <li class="party-member-item">
-          <a href="lang.html">Ricarda Lang</a>
-        </li>
-        <li class="party-member-item">
-          <a href="habeck.html">Robert Habeck</a>
-        </li>
-        <li class="party-member-item">
-          <a href="/gruene/baerbock/">Annalena Baerbock</a>
-        </li><li class="party-member-item">
-          <a href="goering-eckardt.html">Katrin Göring-Eckardt</a>
-        </li>
-        <li class="party-member-item">
-          <a href="fester.html">Emilia Fester</a>
-        </li>
-        <li class="party-member-item">
-          <a href="neubauer.html">Luisa Neubauer</a>
-        </li>
-        <li class="party-member-item">
-          <a href="ganserer.html">Markus (Tessa) Ganserer</a>
-        </li>
-      
-    </section>
+<section class="party-members">
+  <h2 class="party-section-title">Bekannte Mitglieder</h2>
+  <ul class="party-members-list">
+    <li class="party-member-item">
+      <a href="../gruene/lang/">Ricarda Lang</a>
+    </li>
+    <li class="party-member-item">
+      <a href="../gruene/habeck/">Robert Habeck</a>
+    </li>
+    <li class="party-member-item">
+      <a href="../gruene/baerbock/">Annalena Baerbock</a>
+    </li>
+    <li class="party-member-item">
+      <a href="../gruene/goering-eckardt/">Katrin Göring-Eckardt</a>
+    </li>
+    <li class="party-member-item">
+      <a href="../gruene/fester/">Emilia Fester</a>
+    </li>
+    <li class="party-member-item">
+      <a href="../gruene/neubauer/">Luisa Neubauer</a>
+    </li>
+    <li class="party-member-item">
+      <a href="../gruene/ganserer/">Markus (Tessa) Ganserer</a>
+    </li>
+  </ul>
+</section>
 
     <footer class="party-footer">
       <p>&copy; 2025 factico.</p>
